--- a/lab1/1.html
+++ b/lab1/1.html
@@ -6,17 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Personal Details</title>
-    <!-- Personal Details
-Name: XXXXXXXXXXX
-Age: XX
-Sex: XX
-Contact no.: XXXXXXXX (Italic)
-Address: XXXXXXXXXX -->
 </head>
 
 <body>
     <p>Name: Mohammad Ruman</p>
     <p>Age: 18</p>
+    <p>Sex: Male</p>
     <p> <em>Contact no: 8235162700</em></p>
     <p>Address: Kp5 Kiit Bhubaneswar</p>
 
