--- a/lab1/4.html
+++ b/lab1/4.html
@@ -27,7 +27,8 @@
         <div>
 
             <center>
-                <img src="1.jpeg" height="200" width="200" style="border: 3px solid green;">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fin.linkedin.com%2Fin%2Fmohammadruman&psig=AOvVaw01tITsOSuQ9p4qY2aJFGkk&ust=1675886414617000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCLj-l8WZhP0CFQAAAAAdAAAAABAE"
+                    height="200" width="200" style="border: 3px solid green;">
             </center>
             <div style="align-items: center">
                 <p><b>MOHAMMAD RUMAN</b></p>
